# near-template

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  build.sh  deploy.sh  setup.sh
res/: dummy.wasm
src/: lib.rs  utils.rs
tests/: general.rs
